pod_ubuntu.yaml
# Create on K8s 1.20 on 5-21, but doesn't belong here and isn't in 1.yaml

apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    name: ubuntu
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command:
        - sleep
        - "3600"
      resources:
         requests:
           cpu: 0.01
           ephemeral-storage: 0.5Gi
           memory: 0.1G
         limits:
           cpu: 0.05
           memory: 0.2G
           ephemeral-storage: 2Gi
