sts_apache.yaml
# Created on K8s 1.20 on 2-21.
# Isn't standard (not apache)
# Is incomplete

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apache-statefulset
  namespace: apache
  labels:
    app: apache
    foo: bar
spec:
  serviceName: apache
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache_stateful
        image: httpd:2.4.46
        ports:
        - containerPort: 80
          name: web
        #volumeMounts:
        #- name: www
        #  mountPath: /usr/share/nginx/html
 # volumeClaimTemplates:
 # - metadata:
 #     name: www
 #   spec:
 #     accessModes: [ "ReadWriteOnce" ]
 #     resources:
 #       requests:
 #         storage: 1Gi
